// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Tooltip Generic Tooltip 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 250px;
}

.emotion-2 {
  background: transparent;
}

.emotion-2 .tippy-content {
  color: #fff;
  background-color: #0e0e17;
  max-width: 16rem;
  padding: 0.5rem;
  font-size: 0.875rem;
  line-height: 110%;
  border-radius: 0.5rem;
  text-align: justify;
}

.emotion-2 .tippy-arrow {
  color: #0e0e17;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
      data-testid="top"
      placement="top"
    >
      <button>
        Top
      </button>
    </div>
    <div>
      By hover here you can see useful info
    </div>
    <div
      className="emotion-2"
      data-testid="bottom"
      placement="bottom"
    >
      <button>
        Bottom
      </button>
    </div>
    <div>
      By hover here you can see useful info
    </div>
    <div
      className="emotion-2"
      data-testid="right"
      placement="right"
    >
      <button>
        Right
      </button>
    </div>
    <div>
      By hover here you can see useful info
    </div>
    <div
      className="emotion-2"
      data-testid="left"
      placement="left"
    >
      <button>
        Left
      </button>
    </div>
    <div>
      By hover here you can see useful info
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Tooltip Tooltip sizes 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  background: transparent;
}

.emotion-2 .tippy-content {
  color: #fff;
  background-color: #0e0e17;
  max-width: 16rem;
  padding: 0.5rem;
  font-size: 1rem;
  line-height: 110%;
  border-radius: 0.5rem;
  text-align: justify;
}

.emotion-2 .tippy-arrow {
  color: #0e0e17;
}

.emotion-3 {
  background: transparent;
}

.emotion-3 .tippy-content {
  color: #fff;
  background-color: #0e0e17;
  max-width: 16rem;
  padding: 0.5rem;
  font-size: 0.875rem;
  line-height: 110%;
  border-radius: 0.5rem;
  text-align: justify;
}

.emotion-3 .tippy-arrow {
  color: #0e0e17;
}

.emotion-4 {
  background: transparent;
}

.emotion-4 .tippy-content {
  color: #fff;
  background-color: #0e0e17;
  max-width: 16rem;
  padding: 0.5rem;
  font-size: 0.75rem;
  line-height: 110%;
  border-radius: 0.5rem;
  text-align: justify;
}

.emotion-4 .tippy-arrow {
  color: #0e0e17;
}

<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      className="emotion-0"
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="emotion-1"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-2"
        data-testid="right1"
        placement="right"
      >
        <button>
          Large
        </button>
      </div>
      <div>
        By hover here you can see useful info
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-3"
        data-testid="right2"
        placement="right"
      >
        <button>
          Medium
        </button>
      </div>
      <div>
        By hover here you can see useful info
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="emotion-4"
        data-testid="right3"
        placement="right"
      >
        <button>
          Small
        </button>
      </div>
      <div>
        By hover here you can see useful info
      </div>
    </div>
  </div>
</div>
`;
